On theme Sylvia, the message "Gallerie in maintenance" hide information from behind. bug:1768
git-svn-id: http://piwigo.org/svn/trunk@9555 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/themes/Sylvia/theme.css
+++ b/themes/Sylvia/theme.css
@@ -46,7 +46,6 @@ BODY {
 	left:0; 
 	margin:0; 
 	padding:10px 0 6px 0; 
-	position:absolute;
 	text-align:center; 
 	top:0; 
 	width:100%; 
